--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
     <h2 id="movement" class="fw-bold text-success">Cargando...</h2>
 
     <footer class="mt-5 text-muted">
-      Desarrollado por Víctor Pinedo
-    </footer>
+      Desarrollado por Tania Ofelia López Zerón
   </div>
 
   <script src="js/main.js"></script>
